# ffxiv_decoder

./: .gitignore  Cargo.toml  README.md  imgui.ini  line.scd
examples/: export_csv.rs  get_asset.rs  parse_all_asset_paths.rs
src/: crc32.rs  decoder.rs  ffxiv.rs  game_path.rs  lib.rs  main.rs  parser.rs  reader.rs  visualizer.rs
src/decoder/: sqex_scd.rs
src/ffxiv/: asset.rs  asset_dat_file.rs  asset_exd_file.rs  asset_exh_file.rs  asset_file_category.rs  asset_file_chunk.rs  asset_file_path.rs  asset_file_platform.rs  asset_file_repository.rs  asset_files.rs  asset_index_file.rs  asset_path.rs  asset_scd_file.rs  buffer.rs  buffer_file.rs  buffer_vec.rs  category.rs  chunk.rs  decode.rs  error.rs  ffxiv_asset.rs  ffxiv_buffer.rs  ffxiv_game.rs  game.rs  metadata.rs  parser.rs  path.rs  platform.rs  reader.rs  repository.rs  save_file.rs  visualizer.rs
src/ffxiv/asset/: csv.rs  dat.rs  exd.rs  exh.rs  exl.rs  index.rs  scd.rs
src/ffxiv/decoder/audio/: sqex_scd.rs
src/ffxiv/parser/: ffxiv_data.rs
src/ffxiv/parser/ffxiv_data/: metadata.rs
src/ffxiv/parser/ffxiv_data/assets/: index.rs
src/ffxiv/parser/ffxiv_data/metadata/: category.rs  chunk.rs  index_path.rs  platform.rs  repository.rs
src/ffxiv/reader/: buffer.rs  buffer_with_log.rs  buffer_with_random_access.rs
src/ffxiv/reader/buffer/: visualizer.rs
src/ffxiv/reader/buffer/visualizer/: buffer.rs
src/ffxiv/visualizer/: buffer.rs
src/parser/: audio.rs  decoder.rs  ffxiv.rs  reader.rs  visualizer.rs
src/parser/audio/: sqex_scd.rs
src/parser/ffxiv/: dat.rs  data.rs  index.rs  index1.rs  index_path.rs
src/parser/ffxiv/dat/: dat_scd.rs
src/visualizer/: buffer.rs
src2/: ffxiv.rs  main.rs
src2/ffxiv/parser/: ffxiv_data.rs
src2/ffxiv/parser/ffxiv_data/: assets.rs  metadata.rs
src2/ffxiv/parser/ffxiv_data/assets/: dat.rs
src2/ffxiv/parser/ffxiv_data/metadata/: repository.rs
(+1 files in other folders)
