[package]
name = "game_data_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 1

[dependencies]
anyhow = "1.0.72"
copypasta = "0.8.2"
#colored = "2.0.0"
crc = "3.0.1"
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
#crc32fast = "1.3.2"
#eframe = "0.22.0"
#egui = "0.22.0"
#egui_extras = "0.22.0"
#env_logger = "0.10.0"
flate2 = { version = "1.0.26", featires = ["any_zlib"] }
glium = "0.32.1"
imgui = { version = "0.11.0", features = ["docking"] }
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
indicatif = "0.17.5"
#funty = "2.0.0"
#hot-lib-reloader = "0.6.5"
#hound = "3.5.0"
#iced = { versoin = "0.9.0"}
num = "0.4.0"
#once_cell = "1.18.0"
positioned-io = "0.3.1"
rayon = "1.7.0"
regex = "1.8.4"
thiserror = "1.0.44"
#zlib_stream = "0.1.0"
